# automidjourney

./: .gitignore  README.md  auto400.bat  auto_menu.bat  auto_midjourney.py  automate.py  automidjourney.db  config.py  get_prompts.py  log.py  open_db.bat  pyproject.toml  requirements.txt  update_db.py
config/: config.py
docs/: google sheets service name_Notes.md
src/: automate.py  get_prompts.py  log.py  prompt_file.py  update_db.py
