[project]
name = "automidjourney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.145.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.34.0",
    "google-cloud>=0.34.0",
    "opencv-python>=4.10.0.84",
    "pyautogui>=0.9.54",
]
